connections to struct: editing interface of target FBs in FBTypeEditor